# soittolista-suosittelija

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  todo.md
.claude/commands/: commit.md  discogs.md
ai/: conductor.py  eval.py  resolver.py
app/: auth.py  create_router.py  db.py  discover_router.py  explore_router.py  main.py  spotify_player.py
app/static/: style.css
app/templates/: base.html  create.html  create_chat.html  create_success.html  create_tracks.html  discover.html  discover_card_single.html  discover_cards.html  discover_devices.html  explore.html  explore_layout.html  explore_next.html  explore_path.html  explore_pills.html  explore_result.html  index.html
mcp_servers/: artist_tracks_mcp.py  discogs_mcp.py  finnish_charts_mcp.py  lastfm_mcp.py  music_discovery_mcp.py  music_intelligence_mcp.py  musicbrainz_mcp.py  spotify_mcp.py
scripts/: finnish_charts.py  ifpi_scraper.py
